--- a/examples/language_modelling/seq2seq_LSTM.ipynb
+++ b/examples/language_modelling/seq2seq_LSTM.ipynb
@@ -437,7 +437,7 @@
    ],
    "source": [
     "importlib.reload(seq2seq)    \n",
-    "net = seq2seq.Seq2SeqRNN(char2i, i2char)\n",
+    "net = seq2seq.LSTM(char2i, i2char)\n",
     "net.to(device)\n",
     "net.fit(source_1, target_1, save_path = \"checkpoints/seq2seq_rnn.pt\")"
    ]
@@ -502,12 +502,13 @@
    ],
    "source": [
     "importlib.reload(seq2seq)    \n",
-    "net = seq2seq.Seq2SeqRNN(char2i, i2char)\n",
+    "net = seq2seq.LSTM(char2i, i2char)\n",
     "net.load_state_dict(torch.load(\"checkpoints/seq2seq_rnn.pt\"))\n",
     "net.to(device)\n",
-    "indexes, log_probabilities = net.beam_search(source_1[:5])\n",
+    "indexes, log_probabilities = net.greedy_search(source_1[:5])\n",
     "\n",
-    "[net.tensor2text(t) for t in indexes]"
+    "print(log_probabilities)\n",
+    "net.tensor2text(indexes)"
    ]
   },
   {
@@ -552,11 +553,81 @@
    ],
    "source": [
     "importlib.reload(seq2seq)    \n",
-    "net = seq2seq.Seq2SeqRNN(char2i, i2char)\n",
+    "net = seq2seq.LSTM(char2i, i2char)\n",
     "net.load_state_dict(torch.load(\"checkpoints/seq2seq_rnn.pt\"))\n",
     "net.to(device)\n",
     "indexes, log_probabilities = net.sample(source_1[:5])\n",
     "\n",
+    "print(log_probabilities)\n",
+    "net.tensor2text(indexes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Seq2Seq RNN\n",
+      "Tokens in the input vocabulary: 95\n",
+      "Tokens in the output vocabulary: 95\n",
+      "In embedding dimension: 8\n",
+      "Out embedding dimension: 8\n",
+      "Encoder hidden units: 32\n",
+      "Encoder layers: 2\n",
+      "Decoder hidden units: 32\n",
+      "Decoder layers: 2\n",
+      "Dropout: 0.0\n",
+      "Trainable parameters: 40,495\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[['<START> the the the the the',\n",
+       "  '<START> the the the the to ',\n",
+       "  '<START>s the the the the th',\n",
+       "  '<START> the the the the Kt-',\n",
+       "  '<START> the the the the thi'],\n",
+       " ['<START> the the the the the',\n",
+       "  '<START>e the the the the th',\n",
+       "  '<START>e the the the the to',\n",
+       "  '<START>e the the the the pa',\n",
+       "  '<START>e the the the the Kt'],\n",
+       " ['<START>ing the the the the ',\n",
+       "  '<START>hite the the the the',\n",
+       "  '<START>he the the the the t',\n",
+       "  '<START>er the the the the t',\n",
+       "  '<START>hite the the the to '],\n",
+       " ['<START>the the the the the ',\n",
+       "  '<START>the the the the and ',\n",
+       "  '<START>the the Black the th',\n",
+       "  '<START>the the the the Kt-K',\n",
+       "  '<START>the the the the Kt-Q'],\n",
+       " ['<START>. Kt-K4, the the the',\n",
+       "  '<START>. Kt-B3, the the the',\n",
+       "  '<START>. Kt-K4, the the Kt-',\n",
+       "  '<START>. Kt-B3, the the Kt-',\n",
+       "  '<START>. Kt-K4, the the to ']]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(seq2seq)    \n",
+    "net = seq2seq.LSTM(char2i, i2char)\n",
+    "net.load_state_dict(torch.load(\"checkpoints/seq2seq_rnn.pt\"))\n",
+    "net.to(device)\n",
+    "indexes, log_probabilities = net.beam_search(source_1[:5])\n",
+    "\n",
+    "print(log_probabilities)\n",
     "net.tensor2text(indexes)"
    ]
   },
