--- a/examples/character_level_language_modelling/seq2seq_Transformer.ipynb
+++ b/examples/character_level_language_modelling/seq2seq_Transformer.ipynb
@@ -196,7 +196,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1cb67c0d67f4a8f8760b82f5f07abdc",
+       "model_id": "b5a3f400cc7f476b86028d0435d97446",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -248,203 +248,39 @@
       "Model: Transformer\n",
       "Tokens in the input vocabulary: 95\n",
       "Tokens in the output vocabulary: 95\n",
-      "Embedding dimension: 8\n",
-      "Feedforward dimension: 32\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
       "Encoder layers: 2\n",
       "Decoder layers: 2\n",
       "Attention heads: 2\n",
       "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 6,759\n",
+      "Trainable parameters: 254,111\n",
       "\n",
       "Epoch | Train                 | Training time\n",
       "      | Loss     | Error Rate |\n",
       "---------------------------------------------\n",
-      "    1 |   2.8016 |     61.004 |        112.50\n",
-      "    2 |   2.1414 |     55.147 |        226.57\n",
-      "    3 |   1.9693 |     52.035 |        349.77\n",
-      "    4 |   1.8914 |     50.299 |        459.14\n",
-      "    5 |   1.8468 |     49.378 |        571.56\n"
+      "    1 |   1.5897 |     42.718 |        112.53\n",
+      "    2 |   1.2019 |     35.141 |        224.61\n",
+      "    3 |   1.1139 |     33.039 |        336.76\n",
+      "    4 |   1.0630 |     31.822 |        447.15\n",
+      "    5 |   1.0275 |     30.963 |        557.93\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>epoch</th>\n",
-       "      <th>train_loss</th>\n",
-       "      <th>train_error_rate</th>\n",
-       "      <th>training_time</th>\n",
-       "      <th>learning_rate</th>\n",
-       "      <th>weight_decay</th>\n",
-       "      <th>model</th>\n",
-       "      <th>embedding_dimension</th>\n",
-       "      <th>feedforward_dimension</th>\n",
-       "      <th>encoder_layers</th>\n",
-       "      <th>decoder_layers</th>\n",
-       "      <th>attention_heads</th>\n",
-       "      <th>activation</th>\n",
-       "      <th>dropout</th>\n",
-       "      <th>parameters</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2.801586</td>\n",
-       "      <td>61.003737</td>\n",
-       "      <td>112.498123</td>\n",
-       "      <td>0.0001</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Transformer</td>\n",
-       "      <td>8</td>\n",
-       "      <td>32</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>relu</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2.141373</td>\n",
-       "      <td>55.146563</td>\n",
-       "      <td>226.566216</td>\n",
-       "      <td>0.0001</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Transformer</td>\n",
-       "      <td>8</td>\n",
-       "      <td>32</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>relu</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.969328</td>\n",
-       "      <td>52.034820</td>\n",
-       "      <td>349.772037</td>\n",
-       "      <td>0.0001</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Transformer</td>\n",
-       "      <td>8</td>\n",
-       "      <td>32</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>relu</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1.891375</td>\n",
-       "      <td>50.299033</td>\n",
-       "      <td>459.136350</td>\n",
-       "      <td>0.0001</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Transformer</td>\n",
-       "      <td>8</td>\n",
-       "      <td>32</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>relu</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1.846799</td>\n",
-       "      <td>49.378072</td>\n",
-       "      <td>571.563894</td>\n",
-       "      <td>0.0001</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Transformer</td>\n",
-       "      <td>8</td>\n",
-       "      <td>32</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>relu</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6759</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   epoch  train_loss  train_error_rate  training_time  learning_rate  \\\n",
-       "0      1    2.801586         61.003737     112.498123         0.0001   \n",
-       "1      2    2.141373         55.146563     226.566216         0.0001   \n",
-       "2      3    1.969328         52.034820     349.772037         0.0001   \n",
-       "3      4    1.891375         50.299033     459.136350         0.0001   \n",
-       "4      5    1.846799         49.378072     571.563894         0.0001   \n",
-       "\n",
-       "   weight_decay        model  embedding_dimension  feedforward_dimension  \\\n",
-       "0             0  Transformer                    8                     32   \n",
-       "1             0  Transformer                    8                     32   \n",
-       "2             0  Transformer                    8                     32   \n",
-       "3             0  Transformer                    8                     32   \n",
-       "4             0  Transformer                    8                     32   \n",
-       "\n",
-       "   encoder_layers  decoder_layers  attention_heads activation  dropout  \\\n",
-       "0               2               2                2       relu      0.0   \n",
-       "1               2               2                2       relu      0.0   \n",
-       "2               2               2                2       relu      0.0   \n",
-       "3               2               2                2       relu      0.0   \n",
-       "4               2               2                2       relu      0.0   \n",
-       "\n",
-       "   parameters  \n",
-       "0        6759  \n",
-       "1        6759  \n",
-       "2        6759  \n",
-       "3        6759  \n",
-       "4        6759  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "importlib.reload(seq2seq)    \n",
+    "importlib.reload(seq2seq)  \n",
+    "\n",
     "net = seq2seq.Transformer(char2i, i2char)\n",
     "net.to(device)\n",
-    "net.fit(source_1, target_1, save_path = \"checkpoints/seq2seq_transformer.pt\")"
+    "performance = net.fit(source_1, target_1, save_path = \"checkpoints/seq2seq_transformer.pt\")\n",
+    "net.save_architecture(\"architectures/seq2seq_transformer.architecture\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -454,65 +290,48 @@
       "Model: Transformer\n",
       "Tokens in the input vocabulary: 95\n",
       "Tokens in the output vocabulary: 95\n",
-      "Embedding dimension: 8\n",
-      "Feedforward dimension: 32\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
       "Encoder layers: 2\n",
       "Decoder layers: 2\n",
       "Attention heads: 2\n",
       "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 6,759\n",
-      "\n"
+      "Trainable parameters: 254,111\n",
+      "\n",
+      "tensor([-22.2669, -24.0849, -27.8247, -28.5373, -25.4685], device='cuda:0')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[['<START>s the the the  th th',\n",
-       "  '<START>s the the the  tt th',\n",
-       "  '<START>s the the the  th he',\n",
-       "  '<START>s the the the  tt he',\n",
-       "  '<START>s the the the  th at'],\n",
-       " ['<START> the te the the t th',\n",
-       "  '<START> the te the the t at',\n",
-       "  '<START> the te the the t\\n t',\n",
-       "  '<START> the te the then het',\n",
-       "  '<START> the te the the chet'],\n",
-       " ['<START> the te the the t th',\n",
-       "  '<START> the te the the t at',\n",
-       "  '<START> the te the the t\\n t',\n",
-       "  '<START> the te the the t\\n  ',\n",
-       "  '<START> the te the the  het'],\n",
-       " ['<START>the the the the t th',\n",
-       "  '<START>the the the the athe',\n",
-       "  '<START>the the the the  het',\n",
-       "  '<START>the the the the atho',\n",
-       "  '<START>the the the the  hes'],\n",
-       " ['<START>the the the the t th',\n",
-       "  '<START>the the the the  het',\n",
-       "  '<START>the the the the t\\n t',\n",
-       "  '<START>the the the the t\\n  ',\n",
-       "  '<START>the the the the  hes']]"
+       "['<START>ct Gutenbedg picedg. GutGuc mu',\n",
+       " '<START>t Gutenberges sedgRonititic mu',\n",
+       " '<START> GutenbergGa P digR4.orty t mu',\n",
+       " '<START>of the pawis.poFGEswetrtlaw mp',\n",
+       " '<START>utenberg-t4 GmiEGEmamututim m ']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "importlib.reload(seq2seq)    \n",
-    "net = seq2seq.Transformer(char2i, i2char)\n",
+    "net = seq2seq.load_architecture(\"architectures/seq2seq_transformer.architecture\")\n",
     "net.load_state_dict(torch.load(\"checkpoints/seq2seq_transformer.pt\"))\n",
     "net.to(device)\n",
-    "indexes, log_probabilities = net.beam_search(source_1[:5])\n",
+    "indexes, log_probabilities = net.greedy_search(source_1[:5], max_predictions = 30)\n",
     "\n",
-    "[net.tensor2text(t) for t in indexes]"
+    "print(log_probabilities)\n",
+    "net.tensor2text(indexes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -524,40 +343,168 @@
       "Model: Transformer\n",
       "Tokens in the input vocabulary: 95\n",
       "Tokens in the output vocabulary: 95\n",
-      "Embedding dimension: 8\n",
-      "Feedforward dimension: 32\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
       "Encoder layers: 2\n",
       "Decoder layers: 2\n",
       "Attention heads: 2\n",
       "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 6,759\n",
-      "\n"
+      "Trainable parameters: 254,111\n",
+      "\n",
+      "tensor([-51.6691, -27.4829, -30.3443, -35.4172, -49.7243], device='cuda:0')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['<START>\\n\\nTrcatonicarsotuck.',\n",
-       " \"<START>gafir of s'kos fv ov\",\n",
-       " '<START>ged P-f. Ehifiecmede',\n",
-       " '<START>amvifi Whafbe o. t;o',\n",
-       " '<START>an te\\nlosevonehwos Q']"
+       "['<START> GLAve thejd. KRkAM4',\n",
+       " '<START>t Guter usua piftndd',\n",
+       " '<START> of White, p p ams w',\n",
+       " '<START>Black King\\nwIm powag',\n",
+       " '<START>eng 20\\nwat50 K  KtRn']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "importlib.reload(seq2seq)    \n",
-    "net = seq2seq.Transformer(char2i, i2char)\n",
+    "net = seq2seq.load_architecture(\"architectures/seq2seq_transformer.architecture\")\n",
     "net.load_state_dict(torch.load(\"checkpoints/seq2seq_transformer.pt\"))\n",
     "net.to(device)\n",
     "indexes, log_probabilities = net.sample(source_1[:5])\n",
     "\n",
+    "print(log_probabilities)\n",
     "net.tensor2text(indexes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Transformer\n",
+      "Tokens in the input vocabulary: 95\n",
+      "Tokens in the output vocabulary: 95\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
+      "Encoder layers: 2\n",
+      "Decoder layers: 2\n",
+      "Attention heads: 2\n",
+      "Activation: relu\n",
+      "Dropout: 0.0\n",
+      "Trainable parameters: 254,111\n",
+      "\n",
+      "tensor([[-12.6637, -12.7309, -12.7573, -13.4648, -13.5960],\n",
+      "        [-13.4404, -13.7053, -13.8982, -13.9962, -14.0315],\n",
+      "        [-13.6261, -13.6618, -14.9730, -15.2090, -15.4287],\n",
+      "        [-17.3752, -17.6654, -18.0157, -18.4944, -18.7397],\n",
+      "        [-16.0127, -16.1489, -17.1593, -17.7551, -17.9944]], device='cuda:0')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[['<START>ct Gutenbedg picedg.',\n",
+       "  '<START>ct Gutenbedg picedga',\n",
+       "  '<START>ct Gutenbedg picedd ',\n",
+       "  '<START>ct Gutenbedg picedgo',\n",
+       "  '<START>ct Gutenbedg, sEGgR3'],\n",
+       " ['<START>t Gutenberges sedid ',\n",
+       "  '<START>t Gutenbergesssemid ',\n",
+       "  '<START>t Gutenbergesssemidt',\n",
+       "  '<START>t Gutenberges sedgRo',\n",
+       "  '<START>t Gutenberges sedidt'],\n",
+       " ['<START> Gutenberggest ceddo',\n",
+       "  '<START> Gutenberedest ceddo',\n",
+       "  '<START> Gutenberggest cedd4',\n",
+       "  '<START> Gutenberggest cedd ',\n",
+       "  '<START> Gutenbergges sedgRo'],\n",
+       " ['<START>of the BlaG| Kt Q4Kt',\n",
+       "  '<START>of the BlaG| Kt KKKt',\n",
+       "  '<START>of the BlaG| Kt KKtt',\n",
+       "  '<START>of the pawis.poFGEsw',\n",
+       "  '<START>of the pawis.poFGEst'],\n",
+       " ['<START>utenberg-t4 GmiM, ma',\n",
+       "  '<START>utenberg-t4 GmiM, Kt',\n",
+       "  '<START>utenberg-t4 GmiM, G ',\n",
+       "  '<START>utenberg-t4 GmiM, R4',\n",
+       "  '<START>utenberg-t4 GmiM, d.']]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(seq2seq)    \n",
+    "net = seq2seq.load_architecture(\"architectures/seq2seq_transformer.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/seq2seq_transformer.pt\"))\n",
+    "net.to(device)\n",
+    "indexes, log_probabilities = net.beam_search(source_1[:5])\n",
+    "\n",
+    "print(log_probabilities)\n",
+    "[net.tensor2text(t) for t in indexes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Transformer\n",
+      "Tokens in the input vocabulary: 95\n",
+      "Tokens in the output vocabulary: 95\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
+      "Encoder layers: 2\n",
+      "Decoder layers: 2\n",
+      "Attention heads: 2\n",
+      "Activation: relu\n",
+      "Dropout: 0.0\n",
+      "Trainable parameters: 254,111\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['<START>ct Gutenbe',\n",
+       " '<START>t Gutenber',\n",
+       " '<START> Gutenberg',\n",
+       " '<START>of the Bla',\n",
+       " '<START>utenberg-t']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(seq2seq)    \n",
+    "net = seq2seq.load_architecture(\"architectures/seq2seq_transformer.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/seq2seq_transformer.pt\"))\n",
+    "net.to(device)\n",
+    "\n",
+    "idx, log_probabilities = net.predict(source_1[:5])\n",
+    "\n",
+    "net.tensor2text(idx)"
    ]
   },
   {
